fix overflow issues and fit content inside screen

--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -51,7 +51,7 @@
     text-transform: uppercase;
     display: block;
     font-size: 4rem;
-    font-weight: 400;
+    font-weight: 500;
     letter-spacing: 1.2rem;
     margin-bottom: 1.5rem;
     // animation: moveInLeft 1.5s ease-out;
@@ -78,8 +78,10 @@
   &Sub {
     display: block;
     font-size: 1.8rem;
-    font-weight: 400;
+    font-weight: 500;
+    font-style: italic;
     backface-visibility: hidden;
+    transform: translateY(0.5rem);
 
     @media only screen and (max-width: $bp-lg) {
       font-size: 1.4rem;
@@ -88,6 +90,10 @@
       font-weight: 700;
       animation: none;
       letter-spacing: 0.1rem;
+    }
+
+    @media only screen and (max-width: $bp-md) {
+      transform: translateY(0rem);
     }
 
     @media only screen and (max-width: $bp-sm) {
