--- a/src/components/heroLinks/HeroLinks.module.scss
+++ b/src/components/heroLinks/HeroLinks.module.scss
@@ -3,8 +3,9 @@
 .hero {
   padding: 0.3rem;
 
-  @media only screen and (min-width: $bp-lg) {
+  @media only screen and (min-width: $bp-md) {
     margin-left: auto;
+    margin-right: 0.8rem;
   }
 
   &__links {
