--- a/src/layout/Main.scss
+++ b/src/layout/Main.scss
@@ -1,4 +1,7 @@
 .main {
+  position: relative;
   display: flex;
   justify-content: center;
+  z-index: 10;
+  overflow: auto;
 }
