--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,5 +1,4 @@
 .home {
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
