--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,8 +4,16 @@
 @import "base/animations";
 @import "components/button";
 
+html,
 body {
-  background-color: var(--bs-secondary);
+  background-color: #f8ece4;
+  height: 100%;
+  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .resize-animation-stopper * {
@@ -13,10 +21,17 @@ body {
 }
 
 .app {
-  // display: flex;
-  // flex-direction: column;
-
-  height: calc(var(--app-height) - 0rem);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0;
+  margin: 0;
+  /* if you want the content to scroll normally: */
+  overflow: auto;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
   display: grid;
   grid-template-rows: min-content minmax(min-content, 1fr);
   align-content: space-between;
